clusters/k3s-homelab/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - name: glance
          image: glanceapp/glance:v0.7.7
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /app/glance.yml
              subPath: glance.yml
      volumes:
        - name: config
          configMap:
            name: glance-config
